[tool.poetry]
name = "wzkd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"callofduty.py" = "^1.3.0"
jupyterlab = "^3.1.12"
python-dotenv = "^0.19.0"
streamlit = "^1.0.0"
streamlit-aggrid = "^0.2.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
