[tool.poetry]
name = "wzkd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.12"
python-dotenv = "^0.19.0"
streamlit = "^1.0.0"
streamlit-aggrid = "^0.2.2"
plotly = "^5.3.1"
toml = "^0.10.2"
black = "^22.3.0"
backoff = "^2.0.1"
streamlit-option-menu = "^0.3.2"
stqdm = "^0.0.4"
wzlight = "0.1.4"
async-lru = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
